<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchDisplayActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_items"
        android:layout_width="411dp"
        android:layout_height="634dp"
        app:layout_constraintBottom_toTopOf="@+id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selected_items"
        android:layout_width="124dp"
        android:layout_height="634dp"
        app:layout_constraintBottom_toTopOf="@+id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selected_exhibit_count" />

    <SearchView
        android:id="@+id/search"
        android:layout_width="382dp"
        android:layout_height="56dp"
        android:background="#ADDED9"
        android:iconifiedByDefault="false"
        android:queryHint="Search for animals..."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_items"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/selected_exhibit_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24dp"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/clear_selected_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CLEAR"
        android:textSize="12dp"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/search"
        tools:layout_editor_absoluteY="19dp" />
    <Button
        android:id="@+id/plan_btn"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:text="Plan"
        android:backgroundTint="#2BB0A2"
        android:textColor="@color/white"
        android:onClick="onPlanButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/search"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>