<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateDirectionsActivity">

    <!-- Next Button -->

    <!-- Text View -->


    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onNextBtnClick"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/directions_list"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onPreviousBtnClick"
        android:text="Previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:onClick="onSkipBtnClick"
        android:text="Skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/directions_list"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directions_list"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/replan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/purple_500"
        android:clickable="false"
        android:onClick="onReplanBtnClick"
        android:text="\\(^-^)/"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/directions_list"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/previous_button"
        app:layout_constraintTop_toBottomOf="@+id/directions_list"
        app:layout_constraintVertical_bias="1.0" />

    <ListView
        android:id="@+id/directions_list"
        android:layout_width="389dp"
        android:layout_height="453dp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <Switch
        android:id="@+id/d_b_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="56dp"
        android:minHeight="48dp"
        android:text="Detailed/Brief"
        app:layout_constraintBottom_toTopOf="@+id/directions_list"
        app:layout_constraintEnd_toEndOf="@+id/directions_list" />

    <Button
        android:id="@+id/mock_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="onMockLocationBtnClick"
        android:text="Mock Location"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/replan_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/directions_list"
        app:layout_constraintTop_toBottomOf="@+id/directions_list"
        app:layout_constraintVertical_bias="0.139" />

    <Button
        android:id="@+id/clear_plan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="56dp"
        android:onClick="onClearPlanBtnClick"
        android:text="Clear Plan"
        app:layout_constraintBottom_toTopOf="@+id/directions_list"
        app:layout_constraintStart_toStartOf="@+id/directions_list" />

    <TextView
        android:id="@+id/curr_location_textview"
        android:layout_width="139dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:text="Current Location: "
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/directions_list"
        app:layout_constraintTop_toBottomOf="@+id/mock_location_button"
        app:layout_constraintVertical_bias="0.448" />

    <TextView
        android:id="@+id/target_exhibit_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="To: "
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/directions_list"
        app:layout_constraintEnd_toEndOf="@+id/directions_list"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />
</androidx.constraintlayout.widget.ConstraintLayout>